# steamworks_dumper

./: .gitignore  CMakeLists.txt  README.md  callbackdumper.cpp  callbackdumper.h  clientinterfacedumper.cpp  clientmodule.cpp  clientmodule.h  dumperbase.h  emsgdumper.cpp  emsgdumper.h  enumdumper.cpp  enumdumper.h  machfile.cxx  machfile.h  machrec2.cxx  main.cpp  moduleimage.h  stuff.h  swdumper.cxx  util.cxx  util.h
include/hde/: hde32.c  license.txt  readme.txt
src/: callbackdumper.cpp  callbackdumper.h  clientinterfacedumper.cpp  clientinterfacedumper.h  clientmodule.cpp  clientmodule.h  dumperbase.cpp  dumperbase.h  emsgdumper.cpp  emsgdumper.h  enumdumper.cpp  main.cpp  moduleimage.cpp  randomstack.cpp  randomstack.h
